k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observability-app
  namespace: observability-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: observability-app
  template:
    metadata:
      labels:
        app: observability-app
    spec:
      containers:
      - name: observability-app
        image: acrrizwanobs268.azurecr.io/
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
