k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observability-service
  namespace: observability-demo
spec:
  type: ClusterIP
  selector:
    app: observability-app
  ports:
  - port: 80
    targetPort: 5000
